doc: APi docs fix
