# routes/courseRoutes.js
@@ -2,8 +2,8 @@ const express = require("express");
 const router = express.Router();
 const {
   createCourse,
-//   getCourses,
-//   getCourseById,
+  getCourses,
+  getCourseById,
   deleteCourse,
   updateCourse,
 } = require("../controllers/CourseController");
@@ -12,16 +12,11 @@ const validateCourse = require("../middleware/CourseValidator");
 //const authorizeRole = require("../middleware/authorizeRole");
 //const authenticateUser = require("../middleware/authMiddleware");
 
-
 /**
  * @route POST /api/courses/create
  * @desc Create a new course (instructor only)
  */
-router.post(
-  "/create",
-  validateCourse.validateCreateCourse,
-  createCourse
-);
+router.post("/create", validateCourse.validateCreateCourse, createCourse);
 
 /**
  * @route PUT /api/courses/update/:id
@@ -33,13 +28,13 @@ router.put("/update/:id", validateCourse.validateUpdateCourse, updateCourse);
  * @route GET /api/courses
  * @desc Get all courses - task for Andre
  */
-//router.get("/", getCourses);
+router.get("/", getCourses);
 
 /**
  * @route GET /api/courses/:id
  * @desc Get a course by ID task for Andre
  */
-//router.get("/:id", getCourseById);
+router.get("/:id", getCourseById);
 
 /**
  * @route DELETE /api/courses/:id
