# routes/userRoutes.js
@@ -2,8 +2,8 @@ const express = require("express");
 const router = express.Router();
 const {
   registerUser,
-//   getUsers,
-//   getUserById,
+  getAllUsers,
+  getUserById,
   deleteUser,
   updateUser,
 } = require("../controllers/userController");
@@ -12,16 +12,11 @@ const validateUser = require("../middleware/userValidator");
 //const authorizeRole = require("../middleware/authorizeRole");
 //const authenticateUser = require("../middleware/authMiddleware");
 
-
 /**
  * @route POST /api/users/register
  * @desc Register a new user
  */
-router.post(
-  "/register",
-  validateUser.validateCreateUser,
-  registerUser
-);
+router.post("/register", validateUser.validateCreateUser, registerUser);
 
 /**
  * @route PUT /api/users/update/:id
@@ -33,13 +28,13 @@ router.put("/update/:id", validateUser.validateUpdateUser, updateUser);
  * @route GET /api/users
  * @desc Get all users (Accessible to all logged-in users) --  task for Andre
  */
-//router.get("/", getUsers);
+router.get("/", getAllUsers);
 
 /**
  * @route GET /api/users/:id
  * @desc Get a user by ID (Accessible to all logged-in users) -- task for Andre
  */
-//router.get("/:id", getUserById);
+router.get("/:id", getUserById);
 
 /**
  * @route DELETE /api/users/:id
